# giraffe-qc-model

./: .env.example  .gitignore  JETSON_NX_RUNTIME_FEASIBILITY.md  LICENSE  Makefile  PHASE1_BASELINE.md  PHASE1_DEPLOYMENT.md  PHASE1_TEST_REPORT.md  README.md  README_ANDROID_PAD_APP.md  TEST_MAP.md  TEST_REPORT.md  VERIFICATION.md  alembic.ini  pyproject.toml
.github/workflows/: android-pad-ci.yml  ci.yml  qc-closed-loop-gate.yml  qc-full-acceptance.yml  qwen-integration.yml  remediation-lints.yml  tests.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_qc_checkpoint_schema.py  002_qc_sku_catalog.py  003_sku_unique_constraint.py  004_standard_revisions_and_execution.py  005_intake_tables.py  006_pad_conversational_ui.py  007_qc_checkpoint_classifications.py  008_qc_rule_learning.py  009_qc_source_ingestion.py  010_qc_rule_authoring.py  011_qc_sample_learning.py  012_qc_readiness_waivers.py  013_qc_production_assisted.py  014_qc_production_raw_response.py  015_qc_qualification.py  016_qc_incident_response_requalification.py  017_admin_studio_publish_bundles.py  017_detection_point_pass_criteria.py  018_bundle_workstation_verdict_tables.py  018_edge_cv_hotplug.py  019_bundle_workstation_verdict_tables.py  020_detection_point_regions.py  021_standard_probation.py  022_jetson_runner.py  023_detection_point_cv_config.py  024_pad_submission_idempotency.py  025_probation_transition_audit.py  026_checkpoint_review_provenance.py  027_training_judgments.py
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/gradle/: libs.versions.toml
apps/android-qc/: .gitignore  VERIFICATION.md  settings.gradle.kts
apps/android-qc/app/src/main/cpp/: CMakeLists.txt  mnn_qwen_jni.cpp  native_mnn_qwen_bridge.cpp
contracts/: CONTRACTS.md  openapi.yaml  state_model.py
contracts/i18n/: en.json  i18n_contract.md
contracts/kotlin/: GiraffeLanguageSkill.kt  SqliteStandardStore.kt  StandardState.kt
contracts/schemas/: bundle_manifest.schema.json  detection_point.schema.json  verdict_recompute.schema.json
deploy/jetson/: giraffe-stage3-group-b-tunnel.service  giraffe-xavier-admin-runner.service  mnn-sdk.lock.json  model-manifest.example.json  stage3-group-b-tunnel.env.example  xavier-admin-runner.env.example
docs/: ANDROID_PAD_LOCAL_ONLY.md  ANDROID_QC_APP.md  API_CONTRACT.md  BUNDLE_WORKSTATION_S3.md  DEPLOYMENT_LOCAL_QWEN.md  EVIDENCE_GATES.md  JETSON_PRODUCTION_DEPLOYMENT_RUNBOOK.md  LOCAL_FIRST_QWEN_QC.md  MAIN_PAD_SYNC.md  MERGE_LOG.md  MNN_DEVICE_TEST_PLAN.md  MULTIMODEL_PROVIDER_ARCHITECTURE.md  P0_REMEDIATION_MERGE_SUMMARY.md  PAD_LOCAL_MNN_DEPLOYMENT.md  PRD_QC_DB.md  QC_ADMIN_STUDIO.md  QC_DB_DEVELOPER_GUIDE.md  QC_INTAKE_EXECUTION_API.md  QC_LOCAL_FULL_CHECK_REPORT.md  QC_MODEL_FULL_SYSTEM_TEST_2026-07-13.md  QC_MODEL_PHASE1_VISUAL_QC.md  QC_MODEL_PHASE2A_RULE_LEARNING.md  QC_PAD_CONVERSATIONAL_UI.md  QC_PAD_QC_WORK_S6.md  QC_PAD_SHELL_S5.md  QC_S7_DELIVERY_REPORT.md  QC_SAMPLE_ADMIN_UI.md  QC_SAMPLE_DB_API.md  QC_STANDARD_AUTHORING_EXTENSION.md  SERVER_VERDICT_RECOMPUTE_S4.md  STAGE2_P0_REMEDIATION_2026-07-22.md  STAGE3_AB_TESTING_SPEC.md  STAGE3_GROUP_B_REMOTE_ADAPTER.md  STAGE3_JETSON_PREDEPLOY_CHECKLIST.md  V3_ON_DEVICE_QWEN_QC_PRODUCT.md  config-ui.md  cv-job-lifecycle.md  cv-result-schema.md  edge-cv-architecture.md  edge-cv-troubleshooting.md  (+13 more)
docs/api-contracts/: cloud-inference-api.md  jetson-runner-api.md  pad-health-state.md  pad-jetson-health-state.md  probation-api.md  xavier-admin-runner-api.md
docs/contracts/: multimodal_qc_contract_v1.md  multimodal_qc_result_schema_v1.json  sku_catalog_contract_v1.md
edge_cv_agent/: README.md  requirements.txt
edge_cv_agent/app/: __init__.py  config.py  cv_pipeline.py  device_register.py  health.py  heartbeat.py  job_client.py  job_runner.py  live_capture.py  main.py  model_loader.py  result_uploader.py
edge_cv_agent/tests/: test_mock_mode_guard.py  test_mock_runner.py  test_register_payload.py
jetson_runner/: HARDWARE_VALIDATION.md  README.md  requirements.txt
jetson_runner/app/: __init__.py  admin_auth.py  admin_contract.py  config.py  (+7 more)
jetson_runner/native/: CMakeLists.txt  giraffe_mnn_bridge.cpp
sandbox_tests/: STAGE_GATES.md  __init__.py  check_no_leaks.py  common.py  prd_traceability.json  reporting.py
scripts/: 03B_build_apk.sh  03B_pad_install_android13.sh  benchmark_mnn.sh  create_operator.py  deploy_to_pad.sh  download_mnn_android_libs.sh  gen_test_videos.py  generate_qc_simulation_dataset.py  generate_test_fixtures.py  jetson_pad_server_closed_loop.py  jetson_phase1_benchmark.py  jetson_phase1_contract_test.py  jetson_phase1_cv.py  jetson_phase1_fixture.json  jetson_photo_production_smoke.py  jetson_qc_model_env.sh  jetson_stage3_predeploy_check.py  jetson_stage3_run_group_a.py  jetson_stage3_run_group_b.py  jetson_verify_mnn_lock.py  jetson_verify_model_manifest.py  run_capability_a_demo.py  run_capability_b_demo.py  run_jetson_qc_model.sh  seed_edge_cv_data.py  seed_flower_brooch.py  seed_qc_sample_data.py
src/: config.py
tests/: _auth_override.py  config.example.env  conftest.py  edge_cv_helpers.py  jetson_helpers.py  qc_learning_helpers.py  qcm_factories.py  test_admin_studio.py  test_api_authz.py  test_auth_tenant_isolation.py  test_bundle_ed25519.py  test_capture_quality_review_required.py  test_ci_evidence_gates.py  test_cloud_b1.py  test_cloud_qwen_dev_provider.py  test_config_ui.py  test_cv_comparator.py  test_cv_model_swap_real_sample.py  test_cv_preanalysis.py  test_cv_registration.py  test_cv_registration_pipeline.py  test_db_schema.py  test_defect_grounding_capability.py  test_demo_seed_gating.py  test_detection_point_category_confirmation.py  test_digital_inspector_lifecycle.py  test_dual_default_qwen_profiles_not_product_lockin.py  test_e2e_abcdyi.py  test_e2e_admin_to_pad.py  test_edge_cv_captures.py  test_edge_cv_devices.py  test_edge_cv_jobs.py  test_edge_cv_security.py  test_editions.py  test_false_pass_escalation.py  test_human_feedback_loop.py  test_image_quality_capability.py  test_jetson_api.py  test_jetson_pairing.py  test_jetson_readiness.py  (+82 more)
(+626 files in other folders)
