[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "giraffe-qc-model"
version = "0.1.0"
description = "Standalone QC comparison service: image comparison + video capture pipeline"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "opencv-python-headless>=4.10",
    "numpy>=1.26",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "pytest-asyncio>=0.23", "httpx", "pytest-cov>=5.0"]
cloud = ["openai>=1.0"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "real_api: tests that make real API calls (exclude in CI with -m 'not real_api')",
    "device: tests that require a physical Android device (exclude in CI with -m 'not device')",
]

[tool.hatch.envs.default]
features = ["dev", "cloud"]

[tool.hatch.envs.default.scripts]
test = "python -m pytest tests/ -v -m 'not real_api and not device'"
test-cloud = "python -m pytest tests/test_cloud_b1.py -v -m real_api -s"
test-device = "python -m pytest tests/ -v -m device -s"
test-all = "python -m pytest tests/ -v"
test-parser = "python -m pytest tests/test_parser.py -v --tb=short"
