[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "giraffe-qc-model"
version = "0.1.0"
description = "Digital QC worker skill service for SKU-specific visual QC authoring, qualification, and runtime"
requires-python = ">=3.11"
license = { text = "LicenseRef-Giraffe-QC-Model" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "opencv-python-headless>=4.10",
    "numpy>=1.26",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2",
    "jinja2>=3.1",
    "itsdangerous>=2.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "pytest-asyncio>=0.23", "httpx"]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.hatch.envs.default]
features = ["dev"]

[tool.hatch.envs.default.scripts]
test = "python -m pytest tests/ -v"